Create stats for css optimization

--- a/hugo.toml
+++ b/hugo.toml
@@ -6,3 +6,10 @@ theme = 'simple'
 
 [params]
     copyrightTemplate = '(c) Juan Cerdeño {year}'
+
+
+
+[build]
+  [build.buildStats]
+    enable = true
+
