Add debugging info to gh action

--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -52,6 +52,12 @@ jobs:
       - name: Debug Fetch Output
         run: cat data/repositories.json
 
+      - name: Check file permissions
+        run: ls -la data/
+
+      - name: Check if Hugo sees repositories.json
+        run: hugo --debug --printDataDir
+
       - name: Build
         run: NODE_ENV=production hugo --minify --cleanDestinationDir --debug
 
